# apply-job-claw

./: .gitignore  README.md  copy_to_projects.sh  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup_git.sh
.github/workflows/: ci.yml
src/application/services/: job_application_service.py
src/cli/: main.py
src/domain/interfaces/: __init__.py  browser.py  command_handler.py  handlers.py  llm.py  resume_parser.py  storage.py  telegram.py
src/domain/models/: __init__.py  education.py  form_field.py  job_application.py  personal_info.py  skills.py  user_config.py  user_profile.py  work_authorization.py  work_experience.py
src/infrastructure/browser/: __init__.py  form_detector.py  playwright_browser.py
src/infrastructure/llm/: __init__.py  openai_client.py
src/infrastructure/storage/: __init__.py  migrations.py  schema.py  sqlite_storage.py
src/infrastructure/telegram/: __init__.py  telegram_bot.py
src/utils/: logger.py
tests/unit/: test_migrations.py  test_personal_info.py  test_storage.py  test_user_config.py
